--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -26,7 +26,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 a.filled-button {
-	background-color: #44cb05;
+	background-color: #82ad32;
 	color: #fff;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -39,7 +39,7 @@ a.filled-button {
 
 a.filled-button:hover {
 	background-color: #fff;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 a.border-button {
@@ -57,7 +57,7 @@ a.border-button {
 
 a.border-button:hover {
 	background-color: #fff;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 .section-heading {
@@ -73,7 +73,7 @@ a.border-button:hover {
 
 .section-heading em {
 	font-style: normal;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 .section-heading span {
@@ -87,7 +87,7 @@ a.border-button:hover {
 
 #preloader {
   overflow: hidden;
-  background: #44cb05;
+  background: #82ad32;
   left: 0;
   right: 0;
   top: 0;
@@ -167,7 +167,7 @@ a.border-button:hover {
 /* Sub Header Style */
 
 .sub-header {
-	background-color: #44cb05;
+	background-color: #82ad32;
 	height: 46px;
 	line-height: 46px;
 }
@@ -248,7 +248,7 @@ header .navbar {
 	box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
 }
 .background-header .navbar-brand h2 {
-	color: #44cb05!important;
+	color: #82ad32!important;
 }
 .background-header .navbar-nav a.nav-link {
 	color: #1e1e1e!important;
@@ -258,7 +258,7 @@ header .navbar {
 .background-header .navbar-nav .nav-link.current,
 .background-header .navbar-nav .nav-link.show,
 .background-header .navbar-nav .show>.nav-link {
-	color: #44cb05!important;
+	color: #82ad32!important;
 }
 .navbar .navbar-brand {
 	float: 	left;
@@ -322,7 +322,7 @@ header .navbar {
 }
 .navbar .navbar-toggler-icon:after {
 	content: '\f0c9';
-	color: #44cb05;
+	color: #82ad32;
 	font-size: 18px;
 	line-height: 26px;
 	font-family: 'FontAwesome';
@@ -450,7 +450,7 @@ ul.slick-dots {
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
-  color:#44cb05;
+  color:#82ad32;
   animation:fadeOutRight 1s both;
 }
 
@@ -517,7 +517,7 @@ ul.slick-dots {
 /* Request Form */
 
 .request-form {
-	background-color: #44cb05;
+	background-color: #82ad32;
 	padding: 40px 0px;
 	color: #fff;
 }
@@ -601,7 +601,7 @@ ul.slick-dots {
 
 .fun-facts em {
 	font-style: normal;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 .fun-facts p {
@@ -622,7 +622,7 @@ ul.slick-dots {
 
 .count-digit {
     margin: 5px 0px;
-    color: #44cb05;
+    color: #82ad32;
     font-weight: 700;
     font-size: 36px;
 }
@@ -680,7 +680,7 @@ ul.slick-dots {
 
 .more-info .right-content em {
 	font-style: normal;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 .more-info .right-content p {
@@ -713,7 +713,7 @@ ul.slick-dots {
 
 .more-info .left-content em {
 	font-style: normal;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 .more-info .left-content p {
@@ -754,7 +754,7 @@ ul.slick-dots {
 	margin-top: 8px;
 	font-weight: 600;
 	font-size: 14px;
-	color: #44cb05;
+	color: #82ad32;
 }
 .testimonial-item img {
 	max-width: 150px;
@@ -787,7 +787,7 @@ ul.slick-dots {
 }
 
 .callback-form .contact-form {
-	background-color: #44cb05;
+	background-color: #82ad32;
 	padding: 60px;
 	border-radius: 5px;
 	text-align: center;
@@ -863,11 +863,11 @@ ul.slick-dots {
 
 .callback-form .contact-form button.border-button:hover {
 	background-color: #fff;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 .contact-us .contact-form button.filled-button {
-	background-color: #44cb05;
+	background-color: #82ad32;
 	color: #fff;
 	border: none;
 	font-size: 13px;
@@ -885,7 +885,7 @@ ul.slick-dots {
 
 .contact-us .contact-form button.filled-button:hover {
 	background-color: #fff;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 
@@ -959,7 +959,7 @@ footer ul.social-icons li a {
 }
 
 footer ul.social-icons li a:hover {
-	background-color: #44cb05;
+	background-color: #82ad32;
 }
 
 footer ul.menu-list li {
@@ -977,7 +977,7 @@ footer ul.menu-list li a {
 }
 
 footer ul.menu-list li a:hover {
-	color: #44cb05;
+	color: #82ad32;
 }
 
 footer .contact-form input {
@@ -1038,7 +1038,7 @@ footer .contact-form ::placeholder {
 footer .contact-form button.filled-button {
 	background-color: transparent;
 	color: #fff;
-	background-color: #44cb05;
+	background-color: #82ad32;
 	border: none;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -1055,7 +1055,7 @@ footer .contact-form button.filled-button {
 
 footer .contact-form button.filled-button:hover {
 	background-color: #fff;
-	color: #44cb05;
+	color: #82ad32;
 }
 
 
@@ -1082,6 +1082,16 @@ footer .contact-form button.filled-button:hover {
 .page-heading {
 	text-align: center;
 	background-image: url(../images/about.png);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 230px 0px 150px 0px;
+	color: #fff;
+}
+
+.profile-page-heading {
+	text-align: center;
+	background-image: url(../images/profile.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -1179,7 +1189,7 @@ footer .contact-form button.filled-button:hover {
 }
 
 .team-item .down-content span {
-	color: #44cb05;
+	color: #82ad32;
 	font-weight: 600;
 	font-size: 14px;
 	display: block;
@@ -1214,7 +1224,7 @@ footer .contact-form button.filled-button:hover {
 	width: 100%;
 	padding: 30px 30px;
 	display: inline-block;
-	background-color: #44cb05;
+	background-color: #82ad32;
   	font-size: 20px;
   	color: #121212;
   	letter-spacing: 0.5px;
@@ -1275,7 +1285,7 @@ footer .contact-form button.filled-button:hover {
 }
 
 .contact-information .contact-item i {
-	color: #44cb05;
+	color: #82ad32;
 	font-size: 48px;
 	margin-bottom: 40px;
 }
@@ -1293,7 +1303,7 @@ footer .contact-form button.filled-button:hover {
 
 .contact-information .contact-item a {
 	font-weight: 600;
-	color: #44cb05;
+	color: #82ad32;
 	font-size: 15px;
 }
 
